--- a/src/main/resources/com/example/keringo/hello-view.fxml
+++ b/src/main/resources/com/example/keringo/hello-view.fxml
@@ -8,10 +8,10 @@
 
 <HBox xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.keringo.HelloController">
    <children>
-      <Pane prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: white; -fx-border-color: lightgrey;" />
+      <Pane fx:id="pnJatek" prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: white; -fx-border-color: lightgrey;" />
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Start">
+            <Button fx:id="ptButton" mnemonicParsing="false" prefWidth="100.0" text="Start">
                <VBox.margin>
                   <Insets left="5.0" />
                </VBox.margin>
